--- a/Home.html
+++ b/Home.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical Test</title>
-    <link rel="stylesheet" href="Home-Page.css">
-    <link rel="stylesheet" href="Ads.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Ad_style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                     </div>
 
                 </li>
-                <li><a href="Medical_Test.html">Lab Test</a></li>
+                <li><a href="Medical.html">Lab Test</a></li>
 
             </ul>
         </nav>
