--- a/Medical.html
+++ b/Medical.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical Test</title>
-    <link rel="stylesheet" href="Medical_Test.css">
+    <link rel="stylesheet" href="Medical_style.css">
 </head>
 
 <body>
